<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content_act_principal"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.eneasseven.acenco.actPrincipal"
    tools:showIn="@layout/act_principal">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

        <TextView
            android:text="@string/lblServico"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="@style/TextAppearance.AppCompat.Display1"
            android:textAlignment="center"
            android:textColor="@android:color/holo_orange_dark" />

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:text="@string/lblBotaoServico"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/buttonServico"
                android:layout_weight="0.19"
                android:onClick="onClickButtonServico"/>

            <TextView
                android:text="@string/lblStatusServico"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textViewServico"
                android:layout_weight="1" />

        </LinearLayout>

        <TextView
            android:text="@string/lblCameras"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="@style/TextAppearance.AppCompat.Display1"
            android:textAlignment="center"
            android:textColor="@android:color/holo_orange_dark" />

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:text="@string/lblCamera1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/buttonCamera1"
                android:layout_weight="1"
                android:onClick="executaCamera1"/>

            <Button
                android:text="@string/lblCamera2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/buttonCamera2"
                android:layout_weight="1"
                android:onClick="executaCamera1"/>

            <Button
                android:text="@string/lblCamera3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/buttonCamera3"
                android:layout_weight="1"
                android:onClick="executaCamera1"/>

            <Button
                android:text="@string/lblCamera4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/buttonCamera4"
                android:layout_weight="1"
               />
        </LinearLayout>



    </LinearLayout>
</RelativeLayout>
